tests/negative/gold/bad-literal3-test.gold
tests/negative/bad-literal3-test.toit:6:9: error: Invalid number literal
  print 123__456
        ^~~~~~~~
tests/negative/bad-literal3-test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
